# CVM_Assignments

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  test.cpp  test.h
Algo_4.1/: Max_Likelihood_Learning_of_Normal_Distribution.cpp  Max_Likelihood_Learning_of_Normal_Distribution.h
Algo_4.2/: MAP_of_Univariate_Normal_Parameters.cpp  MAP_of_Univariate_Normal_Parameters.h
Algo_4.3/: Bayesian_to_Univariate_Normal_Distribution.cpp  Bayesian_to_Univariate_Normal_Distribution.h
Algo_4.4/: ML_of_Categorical_Parameters.cpp  ML_of_Categorical_Parameters.h
Algo_4.5/: MAP_of_Categorical_Parameters.cpp  MAP_of_Categorical_Parameters.h
Algo_6.1/: Basic_Generative_Classifier.cpp  Basic_Generative_Classifier.h  Basic_Generative_Classifier_Eigen.cpp  Basic_Generative_Classifier_Eigen.h
